--- a/src/components/Testimonials/Testimonials.module.css
+++ b/src/components/Testimonials/Testimonials.module.css
@@ -8,7 +8,7 @@
 
 .fullWidthContainer {
     width: 100%;
-    max-width: 100vw;
+    max-width: 100%;
 }
 
 .header {
